--- a/header.html
+++ b/header.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Purplle Beauty</title>
-    <link rel="stylesheet" href="./styles/index.css">
+    <title>Violet Beaute</title>
+    <link rel="stylesheet" href="./styles/header.css">
 </head>
 <body>
     <!----------------------------------------- Search Pop-up -------------------------------------->
@@ -81,6 +81,6 @@
         <a href=""><span>Register Now.</span></a>
     </div>
 
-    <script src="/scripts/index.js"></script>
+    <script src="/scripts/header.js"></script>
 </body>
 </html>
