--- a/primer.html
+++ b/primer.html
@@ -13,8 +13,8 @@
         <div id="product_first_row">
             <div id="search_box">
                 <div class="input-box">
-                    <input type="text" placeholder="Search...">
-                    <span class="icon">
+                    <input type="text" placeholder="Search..." id="search_box_">
+                    <span id="search_icon">
                         <i class="uil uil-search search-icon"></i>
                     </span>
                 </div>
@@ -41,6 +41,11 @@
 </body>
 </html>
 <script>
+
+
+let search = document.getElementById("search_box_");
+let filter= document.getElementById("Filter");
+let ProductSort= document.getElementById("Sort");
 let mainSection = document.getElementById("Product_container");
 let PrimersData=[];
 window.addEventListener("load",()=>{
@@ -49,10 +54,11 @@ fetchAndRenderPrimer()
 })
 
 function fetchAndRenderPrimer(){
-fetch("https://63c79a8a075b3f3a91cf3edd.mockapi.io/products")
+fetch("https://63c79a8a075b3f3a91cf3edd.mockapi.io/products/")
 .then((res)=> res.json())
 .then((data)=>{
     console.log(data);
+    PrimersData=data;
     let Primersobj= data.map((primer)=>({
 
         id:primer.id,
@@ -64,6 +70,8 @@ fetch("https://63c79a8a075b3f3a91cf3edd.mockapi.io/products")
     renderCardList(Primersobj)
 })
 }
+
+
 
 function renderCardList(cardData){
     let cardList=`
@@ -96,4 +104,80 @@ function getCard(id,title,imageURL,cost){
     `;
     return card
 }
+
+ //// functionalities/////////////////
+let searchbutton= document.getElementById("search_icon")
+searchbutton.addEventListener("click",()=>{
+    let SV=search.value
+    fData=PrimersData
+    let searched= PrimersData.filter((item)=>{
+        if(SV==item.Brand){
+            return true
+        }
+    })
+    if(searched==null){
+      fetchAndRenderPrimer()
+    }
+    fData=searched;
+    functionalitiesPrimer(searched)
+
+
+})
+
+function functionalitiesPrimer(data){
+
+let Primers_obj= data.map((primer)=>({
+
+    id:primer.id,
+    title: primer.description,
+    imageURL: primer.image,
+    cost: "Rs."+primer.price
+
+}));
+renderCardList(Primers_obj)
+
+}
+
+filter.addEventListener("change",()=>{
+    let filtered=PrimersData.filter((item)=>{
+        if(filter.value=="Hundred"){
+            if(item.price<=100){
+                return true;
+            }
+        }else if(filter.value=="ThreeHundred"){
+            if(item.price<=300&&item.price>100){
+                return true;
+            }
+        }else if(filter.value=="Sixhundred"){
+            if(item.price<=600&&item.price>300){
+                return true;
+            }
+        }else if(filter.value=="Abovesixhundred"){
+            if(item.price>600){
+                return true;
+            }
+        }else{
+            fetchAndRenderPrimer()
+        }
+    })
+    functionalitiesPrimer(filtered)
+})
+
+ProductSort.addEventListener("change",()=>{
+    console.log(ProductSort.value)
+    if(ProductSort.value=="Asc"){
+        let Asorted= PrimersData.sort((a,b)=>{
+            return a.price-b.price
+        })
+        console.log(Asorted)
+        functionalitiesPrimer(Asorted)
+    }else if(ProductSort.value=="Desc"){
+        let Dsorted= PrimersData.sort((a,b)=>{
+            return b.price-a.price
+        })
+        functionalitiesPrimer(Dsorted)
+    }else{
+        fetchAndRenderPrimer()
+    }
+})
 </script>
