--- a/primer.html
+++ b/primer.html
@@ -68,9 +68,44 @@ fetch("https://63c79a8a075b3f3a91cf3edd.mockapi.io/products/")
 
     }));
     renderCardList(Primersobj)
+    let cards=document.getElementsByClassName("card");
+    console.log(cards)
+    for(let card of cards){
+        card.addEventListener("click",(e)=>{
+            e.preventDefault()
+            var clicked=card.getAttribute("data-id");
+            console.log(clicked);
+            localStorage.setItem("clicked",clicked
+            )
+
+        })
+    }
+    let buttons=document.getElementsByClassName("card_addtocart");
+    console.log(buttons);
+    for(let button of buttons){
+        button.addEventListener("click",(e)=>{
+            e.preventDefault()
+            var added=button.getAttribute("data-id")
+            PrimersData.map((item)=>{
+                if(item.id==added){
+                    let cartdata= JSON.parse(localStorage.getItem("cart-list"));
+                      if(cartdata==null)
+                        {
+                          cartdata=[];
+                        }
+                      alert("Product Added To Cart")
+                     cartdata.push({...item,quantity:1});
+                     localStorage.setItem("cart-list",JSON.stringify(cartdata))
+                }
+            })
+        })
+    }
+
+
+
+
 })
 }
-
 
 
 function renderCardList(cardData){
@@ -93,12 +128,12 @@ function getCard(id,title,imageURL,cost){
     let card=`
     <div class="card" data-id=${id}>
     <div class="card-image">
-    <img src=${imageURL} alt="food>
+    <img src=${imageURL} alt="food class="product_image" data-id=${id}>
     </div>
     <div class="card-body">
     <h3 class="card-item card-title">${title}</h3>
     <div class="card-item card-additional-info">${cost}</div>
-    <button class="card_addtocart">Add To Cart</button>
+    <button class="card_addtocart" data-id=${id}>Add To Cart</button>
     </div>
     </div>
     `;
@@ -180,4 +215,14 @@ ProductSort.addEventListener("change",()=>{
         fetchAndRenderPrimer()
     }
 })
+
+//////////////////////Individual Product Page ////////////////////////////////
+
+// let individualProduct = document.getElementById("product_image")
+// individualProduct.addEventListener("click",()=>{
+//     console.log("hi");
+// })
+
+
+
 </script>
