added the day-4 code (about,faceWash)

--- a/faceWash.html
+++ b/faceWash.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
 <body>
+    <div class="banner">
+        <img class="banner" src="https://media6.ppl-media.com/mediafiles/ecomm/misc/1674209099_faces_yami-kajal-2596x836.jpg" alt="">
+    </div>
     <div>
         <div id="product_first_row">
             <div id="search_box">
