day4 code added

--- a/footer.html
+++ b/footer.html
@@ -271,7 +271,7 @@ ul{
                 <div class="footer-col">
                     <h4>PURPPLE</h4>
                     <ul>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li><a href="#">Our Team</a></li>
                         <li><a href="#">Carrers</a></li>
                         <li><a href="#">Press</a></li>
