--- a/header.html
+++ b/header.html
@@ -56,14 +56,14 @@
                     <img src="./Images/logo.png" alt="" id="logo1">
                     <!-- <img src="https://media6.ppl-media.com/static/purplle/img/purplle-logo-1.svg" alt="" id="logo1"> -->
                 </a>
-                <a href="">
+                <a href="#">
                     <img src="https://media6.ppl-media.com/mediafiles/ecomm/promo/1537798844_try-logo-3x.png" alt="" id="logo2">
                 </a>
             </div>
             <div>
-                <img src="./Images/fav.png" alt="">
+                <img src="./Images/fav.png" alt="" id="open-fav-page" onclick = "window.location.href = './login.html'">
                 <img src="./Images/profile.png" alt="" onmouseover = "profileDropdown()" onmouseout="profileDropdownclose()">
-                <img src="./Images/cart.png" alt="">
+                <img src="./Images/cart.png" alt="" id="open-cart-page" onclick = "window.location.href = './login.html'">
             </div>
         </nav>
 
@@ -92,5 +92,6 @@
         
 
     <script src="/scripts/header.js"></script>
+    <script src="./scripts/login.js"></script>
 </body>
 </html>
