add final update

--- a/HTML/AfterLogin.html
+++ b/HTML/AfterLogin.html
@@ -7,6 +7,19 @@
 	<title>HomePage</title>
 	<link rel="stylesheet" href="../css/home.css">
 	<script src="https://kit.fontawesome.com/c4e502dbf0.js" crossorigin="anonymous"></script>
+	<style>
+			#sub{
+			width: 200px;
+			height: 250px;
+			padding: 5px;
+			/* background-color: brown; */
+
+		}
+		#content{
+		
+			margin-top: 165px;
+		} 
+	</style>
 
 </head>
 
